--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "dynamic-bem-classnames",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A small utility for creating dynamic BEM classnames.",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/scriptype/bem.git"
+  },
   "main": "bem.min.js",
   "scripts": {
     "build": "npm run babel && npm run uglify",
